# 4uzduotis

./: .gitignore  CMakeLists.txt  Generacija.cpp  Komandos-X.cpp  NumerisDuStrategija.cpp  NumerisVienasStrategija.cpp  Proza.cpp  README.md  Viktor.h  Viktoro_iteratorius.h  galvininkas.h  kontrole.cpp  main.cpp
doxygen/html/: _generacija_8cpp.html  _komandos-_x_8cpp.html  _numeris_vienas_strategija_8cpp.html  _proza_8cpp.html  annotated.html  class_studentai.html  class_zmogas.html  functions.html  functions_rela.html  galvininkas_8h_source.html  globals.html  globals_func.html  menudata.js
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_7.js  all_9.js  classes_0.js  files_3.js  files_4.js  functions_7.js  functions_8.js  related_0.js  searchdata.js  variables_1.js
doxygen/latex/: _proza_8cpp.tex  class_studentai.tex  galvininkas_8h.tex  hierarchy.tex  kontrole_8cpp.tex  refman.tex
html/: _numeris_du_strategija_8cpp.html  class_studentai-members.html  class_zmogas-members.html  classes.html  files.html  functions_func.html  functions_vars.html  galvininkas_8h.html  hierarchy.html  kontrole_8cpp.html  main_8cpp.html
html/search/: all_4.js  all_5.js  all_8.js  all_a.js  classes_1.js  files_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_9.js  variables_0.js
latex/: _generacija_8cpp.tex  _komandos-_x_8cpp.tex  _numeris_du_strategija_8cpp.tex  _numeris_vienas_strategija_8cpp.tex  annotated.tex  class_studentai.eps  class_zmogas.eps  class_zmogas.tex  files.tex  main_8cpp.tex
